more API add & build